force-app/main/default/objects/ACME_Calculation_History__c/ACME_Calculation_History__c.object-meta.xml
<CustomObject>
    <label>ACME Calculation History</label>
    <pluralLabel>ACME Calculation Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>