force-app/main/default/objects/ACME_Calculation_History__c/fields/ACME_Operation_Type__c.field-meta.xml
<CustomField>
    <fullName>ACME_Operation_Type__c</fullName>
    <label>Operation Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Addition</fullName>
            </value>
            <value>
                <fullName>Subtraction</fullName>
            </value>
            <value>
                <fullName>Multiplication</fullName>
            </value>
            <value>
                <fullName>Division</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>