force-app/main/default/objects/ACME_Calculation_History__c/fields/ACME_Result__c.field-meta.xml
<CustomField>
    <fullName>ACME_Result__c</fullName>
    <label>Result</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>