force-app/main/default/objects/ACME_Calculation_History__c/fields/ACME_Second_Number__c.field-meta.xml
<CustomField>
    <fullName>ACME_Second_Number__c</fullName>
    <label>Second Number</label>
    <type>Number</type>
    <precision>18</precision>
    <scale>2</scale>
</CustomField>