force-app/main/default/objects/ACME_Calculation_History__c/fields/ACME_Timestamp__c.field-meta.xml
<CustomField>
    <fullName>ACME_Timestamp__c</fullName>
    <label>Timestamp</label>
    <type>DateTime</type>
</CustomField>